--- a/challenge-1.html
+++ b/challenge-1.html
@@ -86,6 +86,8 @@
 
 		This article adapted from https://grammar.yourdictionary.com/style-and-usage/rules-for-writing-haiku.html
 
+		<footer> article adapted from <a target="_new" href="https://grammar.yourdictionary.com/style-and-usage/rules-for-writing-haiku.html">yourdictionary.com</a></footer>
+	</article>
 	</body>
 </html>
 
