--- a/challenge-2.html
+++ b/challenge-2.html
@@ -1,21 +1,32 @@
-<article>
-	<header><title>Markup Language</title></header>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Challenge 2</title>
+</head>
+<body>
+	<article>
+		<header>Markup Language</header>
+	
+		<h3>From wikimedia</h3>
+	
+		<p>Hypertext Markup Language (<abbr>HTML</abbr>) is the standard markup language 
+		for creating web pages and web applications. With Cascading Style 
+		Sheets (<abbr>CSS</abbr>) and JavaScript, it forms a triad of cornerstone 
+		technologies for the World Wide Web.[4]</p>
+	
+		<p>Web browsers receive <abbr>HTML</abbr> documents from a web server or from 
+		local storage and render the documents into multimedia web pages. 
+		HTML describes the structure of a web page semantically and 
+		originally included cues for the appearance of the document.</p>
+	
+	
+		<footer> <a target="_new" href="https://en.wikipedia.org/wiki/HTML">wikimedia link</a></footer>
+	</article>
+</body>
+</html>
 
-	<h3>From wikimedia</h3>
-
-	<p>Hypertext Markup Language (<abbr>HTML</abbr>) is the standard markup language 
-	for creating web pages and web applications. With Cascading Style 
-	Sheets (<abbr>CSS</abbr>) and JavaScript, it forms a triad of cornerstone 
-	technologies for the World Wide Web.[4]</p>
-
-	<p>Web browsers receive <abbr>HTML</abbr> documents from a web server or from 
-	local storage and render the documents into multimedia web pages. 
-	HTML describes the structure of a web page semantically and 
-	originally included cues for the appearance of the document.</p>
-
-
-	<footer> <a target="_new" href="https://en.wikipedia.org/wiki/HTML">wikimedia link</a></footer>
-</article>
 <!-- 
 
 	The text here is a snippet from wikipedia. It's an article about the HTML language. 
