--- a/challenge-3.html
+++ b/challenge-3.html
@@ -1,8 +1,22 @@
-“The first step toward success is taken when you refuse 
-to be a captive of the environment in which you first 
-find yourself.”
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Challenge 3</title>
+</head>
+<body>
+	<article>
+	
+	<blockquote>“The first step toward success is taken when you refuse 
+	to be a captive of the environment in which you first 
+	find yourself.”</blockquote><br>
 
-- Mark Caine
+	<footer><cite></cite>- Mark Caine</cite></footer>
+	</article>
+</body>
+</html>
+
 
 <!-- 
 
