--- a/challenge-4.html
+++ b/challenge-4.html
@@ -1,18 +1,31 @@
-“The first step toward success is taken when you refuse 
-to be a captive of the environment in which you first 
-find yourself.”
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Challenge 4</title>
+</head>
+<body>
+	
+	<ul>
+		<li><blockquote>“The first step toward success is taken when you refuse 
+		to be a captive of the environment in which you first 
+		find yourself.”<br>
 
--Mark Caine
+		<cite>-Mark Caine</cite></blockquote></li>
 
-“Twenty years from now you will be more disappointed by 
-the things that you didn’t do than by the ones you 
-did do.”
+		<li><blockquote>“Twenty years from now you will be more disappointed by 
+		the things that you didn’t do than by the ones you 
+		did do.”<br>
 
--Mark Twain
+		<cite>-Mark Twain</cite></blockquote></li>
 
-“Those who dare to fail miserably can achieve greatly.”
+		<li><blockquote>“Those who dare to fail miserably can achieve greatly.”<br>
 
--John F. Kennedy
+		<cite>-John F. Kennedy</cite></blockquote></li>
+	</ul>
+</body>
+</html>
 
 <!-- 
 
