--- a/challenge-5.html
+++ b/challenge-5.html
@@ -1,18 +1,34 @@
-Weather forecast for Seattle
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Challenge 5</title>
+</head>
+<body>
+	<article>
+		<header>
+			<h1>Weather forecast for Seattle</h1>
 
-Three day forecast
+			<h3>Three day forecast</h3>
+		</header>
+			<dl>
+				<dt><time>03 March 2018</time></dt>
 
-03 March 2018
+				<dd>Rain.</dd>
 
-Rain.
+				<dt><time>04 March 2018</time></dt>
 
-04 March 2018
+				<dd>Periods of rain.</dd>
 
-Periods of rain.
+				<dt><time>05 March 2018</time></dt>
 
-05 March 2018
+				<dd>Heavy rain.</dd>
+			</dl>
+	</article>
+</body>
+</html>
 
-Heavy rain.
 
 <!-- 
 
