--- a/challenge-6.html
+++ b/challenge-6.html
@@ -1,17 +1,32 @@
-Barack Obama
-@BarackObama
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Challenge 6</title>
+</head>
+<body>
+	<article>
+		<header> 
+			<p><b>Barack Obama </b>
+			@BarackObama</p>
+		</header>
 
-Jul 9
+		<h6>Jul 9</h6>
 
-It’s clear our communities are crying out for change—and what that change looks like is up to us. That’s why it’s
-important to take a hard look at all the perspectives and proposals out there, even the ones we disagree with. It’s how
-we’ll come up with solutions that last.
+		<p>It’s clear our communities are crying out for change—and what that change looks like is up to us. That’s why it’s
+		important to take a hard look at all the perspectives and proposals out there, even the ones we disagree with. It’s how
+		we’ll come up with solutions that last.</p>
 
-1.3K
-4.3K
-29.7K
+		<footer> 1.3K,
+		4.3K,
+		29.7K
 
-Show this thread
+		<a href="https://twitter.com/barackobama/status/1281290986522644483?lang=en">Show this thread</a></footer>
+	</article>
+</html>
+
+
 
 
 <!-- 
