--- a/challenge-7.html
+++ b/challenge-7.html
@@ -1,146 +1,167 @@
-Android
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Challenge 7</title>
+</head>
+<body>
+	<section>
+		<header><h1>Android</h1></header> 
 
 
 
+		<section>
+			<h3>Phones & Tablets</h3>
 
-Phones & Tablets
+			<p>If you want it,<br>
+			Android<br>
+			powers it.<br></p>
 
-If you want it,
-Android
-powers it.
 
 
 
+			<section>
+				<h2>FEATURED</h2>
 
+				<strong>Google Pixel 3a</strong>
 
-FEATURED
+				<p>A fullscreen 5.6” or 6” display. Up to 30 hours of battery life1. And a camera that does the work for you — with Night Sight, Portrait Mode, and built-in Depth Editor.</p>
 
-Google Pixel 3a
+				<a href="https://store.google.com">LEARN MORE</a>
+			</section>
 
-A fullscreen 5.6” or 6” display. Up to 30 hours of battery life1. And a camera that does the work for you — with Night Sight, Portrait Mode, and built-in Depth Editor.
 
-LEARN MORE
+			<section>
+				<h2>LATEST AND GREATEST</h2> 
 
+				<h4>The world’s 
+				first 5G 
+				phones.</h4>
 
+				<em>Download a 4K movie in the blink of an eye. Jump on a group video call that never lags. Turn your living room into an AR zombie apocalypse. 5G is taking phones to the next level — and they’re only built on Android.</em>
+				<dl>
+					<dt><strong>Samsung</strong> </dt>
+					<dd>Galaxy 10 5G</dd>
 
+					<dt><strong>LG</strong></dt>
+					<dd>V50 ThinQ 5G</dd>
 
-LATEST AND GREATEST
+					<dt><strong>Xiaomi</strong></dt>
+					<dd>Mi Mix 3 5G</dd>
 
-The world’s 
-first 5G 
-phones.
+					<dt><strong>Oppo</strong></dt>
+					<dd>Reno 5G</dd>
+				</dl>
+			</section>
 
-Download a 4K movie in the blink of an eye. Jump on a group video call that never lags. Turn your living room into an AR zombie apocalypse. 5G is taking phones to the next level — and they’re only built on Android.
 
-Samsung 
-Galaxy 10 5G
 
-LG
-V50 ThinQ 5G
+			<section>
+				<h2>ANDROID ONE</h2>
 
-Xiaomi
-Mi Mix 3 5G
+				<em>Secure, up-to-date, and easy to use.</em>
 
-Oppo
-Reno 5G
+				<p>Android One phones are certified to run the simplest, latest version of Android. Regular security updates every month. At least two years of OS upgrades.2 And only loaded with the most essential apps.</p>
 
+				<a href="https://www.android.com/one/?gclid=Cj0KCQjw7ZL6BRCmARIsAH6XFDJ0rD0awz4_Ugz038EXb-81baZBDF9YaPRPseCdMCRQvXnlN7Y2umUaAuntEALw_wcB&gclsrc=aw.ds">Learn more</a>
+			</section>
+			<section>
+				<h2>POPULAR PICKS</h2>
 
+				<em>Cameras that catch any shot.</em>
 
+				<p>Android powers some of the world’s top cameras. So when the action speeds up or the lights go down low, you always get that perfect shot.</p>
+				<dl>
+					<dt><strong>Google</strong></dt>
+					<dd>Pixel 3a</dd>
 
+					<dt><strong>Motorola</strong></dt>
+					<dd>Moto G7</dd>
 
-ANDROID ONE
+					<dt><strong>OnePlus</strong></dt>
+					<dd>6T</dd>
 
-Secure, up-to-date, and easy to use.
+					<dt><strong>Sony</strong></dt>
+					<dd>Xperia 1</dd>
+				</dl>
+			</section>
 
-Android One phones are certified to run the simplest, latest version of Android. Regular security updates every month. At least two years of OS upgrades.2 And only loaded with the most essential apps.
 
-Learn more
+			<section>
+				<h2>FEATURED TABLETS</h2>
 
+				<em>Sometimes you need a bigger screen.</em>
 
-POPULAR PICKS
+				<p>Watch a show the way it was intended. Edit a photo all the way down to the pixels. With Android tablets, you get more screen to do your thing.</p>
+				<dl>
+					<dt><strong>Samsung</strong></dt>
+					<dd>Galaxy Tab S4</dd>
 
-Cameras that catch any shot.
+					<dt><strong>Lenovo</strong></dt>
+					<dd>Tab P10</dd>
 
-Android powers some of the world’s top cameras. So when the action speeds up or the lights go down low, you always get that perfect shot.
+					<dt><strong>Lenovo</strong></dt>
+					<dd>Tab P10 Plus</dd>
+				</dl>
+			</section>
+					
 
-Google
-Pixel 3a
+			<section>
+				<h2>ANDROID FOR BUSINESS</h2>
 
-Motorola
-Moto G7
+				<em>Put Android to work.</em>
 
-OnePlus
-6T
+				<p>Use the work profile to keep your personal data separate. Turn off work apps when you want to disconnect. And with the Android Enterprise Recommended program, it's easy to find the right devices for your job. From construction sites to corporate offices.</p>
 
-Sony
-Xperia 1
+				<a href="https://www.android.com/">Learn more</a>
+			</section>
 
 
 
+			<section>
+				<h2>ANDROID ONE</h2>
 
-FEATURED TABLETS
+				<em>Secure, up-to-date, and easy to use.</em>
 
-Sometimes you need a bigger screen.
+				<p>Android One phones are certified to run the simplest, latest version of Android. Regular security updates every month. At least two years of OS upgrades.2 And only loaded with the most essential apps.</p>
 
-Watch a show the way it was intended. Edit a photo all the way down to the pixels. With Android tablets, you get more screen to do your thing.
+				<a href="https://www.android.com/">Learn more</a>
+			</section>
 
-Samsung
-Galaxy Tab S4
 
-Lenovo
-Tab P10
 
-Lenovo
-Tab P10 Plus
 
+			<section>
+				<h2>ANDROID (GO EDITION)</h2>
 
+				<em>Less RAM.<br> 
+				Still loaded<br>
+				with power.</em>
 
+				<p>Get the best of Android on lower RAM devices. Reimagined apps like YouTube Go and Google Go take up less space and start up faster. Data Saver helps you manage your data. And the Play Store continually gets new apps made just for Android (Go edition).</p>
 
-ANDROID FOR BUSINESS
+				<a href="https://www.android.com/go">Learn more</a>
+				<dl>
+					<dt><strong>Tecno</strong></dt>
+					<dd>Spark 2</dd>
 
-Put Android to work.
+					<dt><strong>Nokia</strong></dt>
+					<dd>1 Plus</dd>
 
-Use the work profile to keep your personal data separate. Turn off work apps when you want to disconnect. And with the Android Enterprise Recommended program, it's easy to find the right devices for your job. From construction sites to corporate offices.
+					<dt><strong>Lava</strong></dt>
+					<dd>Z50</dd>
 
-Learn more
+					<dt><strong>Lenovo Moto</strong></dt>
+					<dd>E5 Play</dd>
+				</dl>
+			</section>
+	</section>
+	</section>
+</body>
+</html>
 
 
-
-
-
-ANDROID ONE
-
-Secure, up-to-date, and easy to use.
-
-Android One phones are certified to run the simplest, latest version of Android. Regular security updates every month. At least two years of OS upgrades.2 And only loaded with the most essential apps.
-
-Learn more
-
-
-
-
-
-ANDROID (GO EDITION)
-
-Less RAM. 
-Still loaded 
-with power.
-
-Get the best of Android on lower RAM devices. Reimagined apps like YouTube Go and Google Go take up less space and start up faster. Data Saver helps you manage your data. And the Play Store continually gets new apps made just for Android (Go edition).
-
-Learn more
-
-Tecno
-Spark 2
-
-Nokia
-1 Plus
-
-Lava
-Z50
-
-Lenovo Moto
-E5 Play
 
 
 <!-- 
